{
  "signUpTitle": " {nameOfTheApp}에 가입하세요 {when} ",
  "loginTitle": "{nameOfTheApp} 계정으로 로그인하세요",
  "signUpSubtitle": "Create a profile, follow other accounts, make your own videos, and more.",
  "emailPasswordButton": "Use email & password",
  "AppleButton": "Continue with Apple",
  "alreadyHaveAnAccount": "Already have an account?",
  "logIn": "Log in",
  "likeCount": "{value}",
  "commentCount": "{value}",
  "commentTitle": "{value} {value2, plural, =1{comment} other{comments}}"
}
