...
  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      onTap: _onScaffoldTap,
      child: Scaffold(
        appBar: AppBar(
          title: const Text("Sign up"),
        ),
        body: Padding(
          padding: const EdgeInsets.symmetric(
            horizontal: Sizes.size36,
          ),
          child: Column(
...
                    "8 to 20 characters",
                  ),
                ],
              ),
              Gaps.v20,
              FormButton(
                text: "Next",
                disabled: _password.isEmpty || !_isPasswordValid(),
                onTap: _onSubmit,
              ),
            ],
          ),
        ),
...
